Mon 31 Feb 2007 00:59:47 CET	Version 0.2.0

	* feature: highlight and display current move
	* feature: add variations
	* feature: support promotion when entering moves
	* bugfix: correctly display move numbers for non-standard games
	* bugfix: keep move number and side to move when setting position
	* bugfix: copy/paste move number to/from FEN
	* bugfix: accept non-standard castling (0-0 instead of O-O)
	* change: clean configuration file format

Mon 19 Feb 2007 00:59:47 CET	Version 0.1.0
